--- a/en/慐/慐.15716.wikitext
+++ b/en/慐/慐.15716.wikitext
@@ -8,6 +8,24 @@
 ====References====
 * {{Han ref|kx=0398.261|hdz=42333.021|uh=6150|ud=24912}}
 
+----
+
+==Chinese==
+{{zh-hanzi-box|[[慐]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=gōng,hóng,gòng
+|c=
+|mc=
+|oc=
+|ma=
+|cat=
+}}
+
+====References====
+*[http://www.cns11643.gov.tw/AIDB/query_general_view.do?page=3&code=647A Chinese National Standards (Master Ideographs Seeker for CNS 11643)]
+
 [[fr:慐]]
 [[li:慐]]
 [[pl:慐]]
