--- a/en/慑/慑.15717.wikitext
+++ b/en/慑/慑.15717.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心尸十水 (PSJE)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心尸十水 (PSJE)|ids=⿰[[忄]][[聂]]}}
 
 # [[afraid]], [[scared]], [[fearful]]
 
