--- a/en/慑/慑.15717.wikitext
+++ b/en/慑/慑.15717.wikitext
@@ -11,21 +11,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|慑|[[懾]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=jip3, sip3|tra=懾}}
-
-# {{defn|lang=yue|sort=心10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|tra=懾|pin=[[shè]] ([[she4]])|wg=she<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
+===Pronunciation===
+{{zh-pron
+|m=shè
+|c=zip3,sip3
+|mc=y
+|oc=y
+|ma=
+|cat=a
+}}
 
 [[fr:慑]]
 [[li:慑]]
