--- a/en/慓/慓.15719.wikitext
+++ b/en/慓/慓.15719.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=11|sn=14|four=9109<sub>1</sub>|canj=心一田火 (PMWF)}}
+{{Han char|rn=61|rad=心|as=11|sn=14|four=9109<sub>1</sub>|canj=心一田火 (PMWF)|ids=⿰[[忄]][[票]]}}
 
 # {{defn|Han|sort=心11}}
 
