--- a/en/慓/慓.15719.wikitext
+++ b/en/慓/慓.15719.wikitext
@@ -10,6 +10,21 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[慓]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=piào
+|c=piu5
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -28,15 +43,6 @@
 {{ko-hanja|hangeul=표|eumhun=|rv=pyo|mr=p'yo|y=phyo}}
 
 # {{defn|lang=ko|sort=心11}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[piào]] ([[piao4]])|wg=p'iao<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心11}}
 
 [[fr:慓]]
 [[li:慓]]
