--- a/en/慓/慓.15719.wikitext
+++ b/en/慓/慓.15719.wikitext
@@ -44,6 +44,18 @@
 
 # {{defn|lang=ko|sort=心11}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=心11| hanviet = phiêu}}
+
+# {{defn|lang=vi|sort=心11}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=6153 Nom Foundation]
+
 [[fr:慓]]
 [[li:慓]]
 [[hu:慓]]
