--- a/en/慔/慔.15720.wikitext
+++ b/en/慔/慔.15720.wikitext
@@ -10,12 +10,21 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-hanzi-box|[[慔]]}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[mò]] ([[mo4]])|wg=mo<sup>4</sup>}}
+===Pronunciation===
+{{zh-pron
+|m=mù
+|c=mou6
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
 
-# {{defn|lang=cmn|sort=心11}}
+====References====
+*(''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
 [[fr:慔]]
 [[li:慔]]
