--- a/en/慕/慕.15721.wikitext
+++ b/en/慕/慕.15721.wikitext
@@ -18,12 +18,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[慕]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=mou6}}
-
-# {{defn|lang=yue|sort=心11}}
+===Pronunciation===
+{{zh-pron
+|m=mù
+|c=mou6
+|mc=y
+|oc=y
+|ma=
+|cat=v
+}}
 
 ----
 
@@ -45,15 +51,6 @@
 {{ko-hanja|hangeul=모|eumhun=|rv=mo|mr=mo|y=mo}}
 
 # {{defn|lang=ko|sort=心11}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[mù]] ([[mu4]])|wg=mu<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心11}}
 
 ----
 
