--- a/en/慖/慖.15722.wikitext
+++ b/en/慖/慖.15722.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=11|sn=14|four=9600<sub>0</sub>|canj=心田戈一 (PWIM)}}
+{{Han char|rn=61|rad=心|as=11|sn=14|four=9600<sub>0</sub>|canj=心田戈一 (PWIM)|ids=⿰[[忄]][[國]]}}
 
 # {{defn|Han|sort=心11}}
 
