--- a/en/慖/慖.15722.wikitext
+++ b/en/慖/慖.15722.wikitext
@@ -10,12 +10,21 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-hanzi-box|[[慖]]}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[guó]] ([[guo2]])|wg=kuo<sup>2</sup>}}
+===Pronunciation===
+{{zh-pron
+|m=guó
+|c=gwok3,gok3
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
 
-# {{defn|lang=cmn|sort=心11}}
+====References====
+*(''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
 [[fr:慖]]
 [[li:慖]]
