--- a/en/慗/慗.15723.wikitext
+++ b/en/慗/慗.15723.wikitext
@@ -10,12 +10,21 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-hanzi-box|[[慗]]}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[chì]] ([[chi4]])|wg=ch'ih<sup>4</sup>}}
+===Pronunciation===
+{{zh-pron
+|m=chì
+|c=cik1
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
 
-# {{defn|lang=cmn|sort=心11}}
+====References====
+*(''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
 [[fr:慗]]
 [[li:慗]]
