--- a/en/慙/慙.15725.wikitext
+++ b/en/慙/慙.15725.wikitext
@@ -46,6 +46,18 @@
 
 # {{defn|lang=ko|sort=心11}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=心11| hanviet = tàm}}
+
+# {{defn|lang=vi|sort=心11}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=6159 Nom Foundation]
+
 [[fr:慙]]
 [[ko:慙]]
 [[li:慙]]
