--- a/en/慛/慛.15727.wikitext
+++ b/en/慛/慛.15727.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=11|sn=14|four=9201<sub>4</sub>|canj=心山人土 (PUOG), X心山人土 (XPUOG)}}
+{{Han char|rn=61|rad=心|as=11|sn=14|four=9201<sub>4</sub>|canj=心山人土 (PUOG), X心山人土 (XPUOG)|ids=⿰[[忄]][[崔]]}}
 
 # {{defn|Han|sort=心11}}
 
