--- a/en/慛/慛.15727.wikitext
+++ b/en/慛/慛.15727.wikitext
@@ -26,6 +26,15 @@
 ====References====
 *(''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=心11| hanviet = thôi}}
+
+# {{defn|lang=vi|sort=心11}}
+
 [[fr:慛]]
 [[li:慛]]
 [[pl:慛]]
