--- a/en/慜/慜.15728.wikitext
+++ b/en/慜/慜.15728.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=11|sn=15|four=|canj=人大心 (OKP), X人大心 (XOKP)}}
+{{Han char|rn=61|rad=心|as=11|sn=15|four=|canj=人大心 (OKP), X人大心 (XOKP)|ids=⿱[[敏]][[心]]}}
 
-# name of a monk in Tang dynasty
+# [[name]] of a [[monk]] during the [[Tang]] [[dynasty]]
 
 ====References====
 * {{Han ref|kx=0399.020|dkj=11099|dj=0738.080|hdz=42343.050|uh=615C|ud=24924}}
