--- a/en/慜/慜.15728.wikitext
+++ b/en/慜/慜.15728.wikitext
@@ -10,12 +10,21 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-hanzi-box|[[慜]]}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[mǐn]] ([[min3]])|wg=min<sup>3</sup>}}
+===Pronunciation===
+{{zh-pron
+|m=mǐn
+|c=man5
+|mc=y
+|oc=y
+|ma=
+|cat=pn
+}}
 
-# {{defn|lang=cmn|sort=心11}}
+====References====
+*(''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
 [[fr:慜]]
 [[li:慜]]
