--- a/en/慝/慝.15729.wikitext
+++ b/en/慝/慝.15729.wikitext
@@ -11,12 +11,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[慝]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=nik1, tik1}}
-
-# {{defn|lang=yue|sort=心11}}
+===Pronunciation===
+{{zh-pron
+|m=tè
+|c=nik1,tik1
+|mc=y
+|oc=y
+|ma=
+|cat=v,n
+}}
 
 ----
 
@@ -38,15 +44,6 @@
 {{ko-hanja|hangeul=특|eumhun=|rv=teuk|mr=t'ŭk|y=thuk}}
 
 # {{defn|lang=ko|sort=心11}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[tè]] ([[te4]])|wg=t'e<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心11}}
 
 [[fr:慝]]
 [[li:慝]]
