--- a/en/慞/慞.15730.wikitext
+++ b/en/慞/慞.15730.wikitext
@@ -25,7 +25,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[cào]] ([[cao4]]), [[zhāng]] ([[zhang1]])|wg=ts'ao<sup>4</sup>, chang<sup>1</sup>}}
+{{cmn-hanzi|pin=[[zhāng]] ([[zhang1]]), [[cào]] ([[cao4]])|wg=ts'ao<sup>4</sup>, chang<sup>1</sup>}}
 
 # {{defn|lang=cmn|sort=心11}}
 
