--- a/en/慟/慟.15731.wikitext
+++ b/en/慟/慟.15731.wikitext
@@ -2,11 +2,11 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=11|sn=14|four=9402<sub>7</sub>|canj=心竹土尸 (PHGS)}}
+{{Han char|rn=61|rad=心|as=11|sn=14|four=9402<sub>7</sub>|canj=心竹土尸 (PHGS)|ids=⿰[[忄]][[動]]}}
 
 # [[sadness]], [[grief]]
 # [[mourn]]
-# be moved
+# be [[moved]]
 
 ====References====
 * {{Han ref|kx=0399.060|dkj=11103|dj=0738.220|hdz=42346.060|uh=615F|ud=24927|bh=BA45|bd=47685}}
