--- a/en/慠/慠.15732.wikitext
+++ b/en/慠/慠.15732.wikitext
@@ -11,12 +11,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[慠]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ngou6]], [[ou6]]|y=ngou6, ou6}}
-
-# {{defn|lang=yue|sort=心11}}
+===Pronunciation===
+{{zh-pron
+|m=ào
+|c=ngou6,ou6
+|mc=
+|oc=
+|ma=
+|cat=a
+}}
 
 ====References====
 *[http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109-110]
@@ -41,15 +47,6 @@
 {{ko-hanja|hangeul=오|eumhun=|rv=o|mr=o|y=o}}
 
 # {{defn|lang=ko|sort=心11}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[ào]] ([[ao4]])|wg=ao<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心11}}
 
 [[fr:慠]]
 [[li:慠]]
