--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -71,7 +71,7 @@
 * German: {{t+|de|Olive|f}}
 * Greek: {{t+|el|ελιά|f|tr=eliá}}
 *: Ancient: {{t|grc|ἐλαία|f|tr=elaiā|sc=polytonic}}
-* Gujarati: {{t|gu|ઓલિવ|tr=ōliva|sc=Gujr}}
+* Gujarati: {{t|gu|ઓલિવ|m|tr=ōliva|sc=Gujr}}
 * Hausa: {{t|ha|zaitun|m|alt=zàitûn}}
 * Hebrew: {{t+|he|זית|tr=zait}}
 * Hindi: {{t|hi|ज़ैतून|tr=zaitūn}}, {{t|hi|तैलबदर|m|tr=tailbadara|sc=Deva}}
