--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -92,7 +92,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Italian: {{t+|it|gonna|f}}
 * Japanese: {{t|ja|スカート|tr=sukāto|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|cotelle|f}}, {{t|roa-jer|cotillon|m}}
-* Korean: {{t+|ko|치마|sc=Kore}}
+* Korean: {{t+|ko|치마|sc=Kore}}, {{t+|ko|스커트|sc=Kore}}
 {{trans-mid}}
 * Latvian: {{t|lv|svārki|m-p}}
 * Luxembourgish: {{t|lb|Jupe|f}}
