--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -67,7 +67,7 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 * Persian: {{t+|fa|سکرتر|tr=sekreter|sc=fa-Arab}}
 * Polish: {{t+|pl|sekretarz|m}}, {{t+|pl|sekretarka|f}}
 * Portuguese: {{t+|pt|secretário|m}}, {{t+|pt|secretária|f}}
-* Romanian: {{t+|ro|secretar}}
+* Romanian: {{t+|ro|secretar|m}}, {{t+|ro|secretară|f}}
 * Russian: {{t+|ru|секрета́рь|m|f|tr=sekretár’}}, {{t+|ru|секрета́рша|f|tr=sekretárša}} {{qualifier|colloquial for female}}
 * Scottish Gaelic: {{t|gd|rùnaire|m}}, {{t|gd|clèireach|m}}
 * Serbo-Croatian: {{t|sh|tȃjnīk|m}}, {{t|sh|tȃjnica|f}}
