--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -32,10 +32,21 @@
 ===Kanji===
 {{ja-kanji|grade=c|rs=日04}}
 
-# {{defn|lang=ja|sort=日04}}
+# A [[swarm]] of or an organism that swarms (e.g. bugs), an organism that forms in large groups (e.g. [[kombu]])
+# elder [[brother]]
+# [[descendants]], great-great-great-great grandchild
 
 ====Readings====
 * {{ja-readings|on=[[こん]] (kon)|kun=[[あに]] (ani)}}
+
+====Compounds====
+{{der-top3|Compounds}}
+* {{l|ja|昆虫}} ({{l|ja|こんちゅう}}, ''konchū'')
+* {{l|ja|昆布}} ({{l|ja|こんぶ}}, ''kombu'')
+{{der-mid3}}
+* {{l|ja|昆弟}} ({{l|ja|こんてい}}, ''kontei'')
+* {{l|ja|昆孫}} ({{l|ja|こんそん}}, ''konson'')
+{{der-bottom}}
 
 ----
 
