--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -66,6 +66,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Georgian: {{t|ka|პორტი|tr=porti|sc=Geor}}, {{t|ka|ნავსადგური|tr=navsadguri|sc=Geor}}
 * German: {{t+|de|Hafen|m}}
 * Greek: {{t+|el|λιμάνι|n|tr=limáni}}, {{t+|el|λιμένας|m|tr=liménas}}
+* Hawaiian: {{t|haw|awa}}
 * Hebrew: {{t+|he|נמל|m|tr=namál|sc=Hebr}}
 * Hindi: {{t|hi|बंदरगाह|m|tr=bandargāh|sc=Deva}}, {{t|hi|पोर्ट|tr=porṭ|sc=Deva}}
 * Hungarian: {{t+|hu|kikötő}}
@@ -161,7 +162,6 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 {{trans-see|left-hand side of a vessel|larboard}}
 
 {{checktrans-top}}
-* Hawaiian: {{t-check|haw|awa}}
 * Latin: {{qualifier|1}} {{t-check|la|portus|m}}
 {{trans-mid}}
 * Maori: {{t-check|mi|taunga tima}}, {{t-check|mi|herenga}}, {{t-check|mi|aka}}, {{t-check|mi|poi}}, {{t-check|mi|ama}}, {{t-check|mi|mauī}}, {{t-check|mi|pōta}}
