--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -41,7 +41,8 @@ Also simplification of [[詹]], as in [[担]].
 ===Kanji===
 {{ja-kanji|grade=|rs=日01}}
 
-# {{defn|lang=ja|sort=日01}}
+# Morning
+# Dawn
 
 ====Readings====
 * {{ja-readings|on=[[たん]] (tan)|kun=[[あした]] (ashita)}}
