--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -18,7 +18,7 @@ From {{etyl|enm}} {{term|Germanie|lang=enm}} &c., from {{etyl|ang}} {{term|Germa
 #*: Severing's belief that trade union workers were the most progressive and democratic element in '''Germany''' holds up well under investigation.
 # {{context|geography|historical|lang=en}} The [[Central Europe]]an [[state]] [[form]]ed by [[Prussia]] in 1871 or its [[successor]] [[state]]s, with their [[capital]]s in [[Berlin]].
 # {{context|geography|historical|lang=en}} A [[nominal]] [[medieval]] [[kingdom]] [[form]]ing a [[region]] of the [[Carolingian]] and [[Holy Roman Empire|Holy Roman]] [[empire]]s, with [[various]] [[capital]]s.
-# {{context|geography|chiefly|_|historical}} The [[nation]] of the [[German]] [[people]], [[regardless]] of their [[political]] [[unification]] (''see usage note'').
+# {{context|geography|chiefly|_|historical|lang=en}} The [[nation]] of the [[German]] [[people]], [[regardless]] of their [[political]] [[unification]] (''see usage note'').
 # {{context|countable|geography|historical|lang=en}} [[West Germany|West]] or [[East Germany]] or [[any]] [[other]] [[German]] [[state]] (''see usage note''); {{context|in the plural|lang=en}} [[both]], [[several]], or [[all]] of [[these]] [[state]]s, [[take]]n [[together]].
 #*'''1872''', ''History of English Literature'', an abridgment by John Fiske of H. van Laun's translation of Hippolyte Taine's '''1864''' ''Histoire de la littérature anglaise''; page 26:
 #*: While the Germans of Gaul, Italy, and Spain became Romans, the Saxons retained their language, their genius, and manners, and created in Britain a '''Germany''' outside of '''Germany'''.
