--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -29,7 +29,7 @@ From {{etyl|enm|en}} {{term|Germanie|lang=enm}} &c., from {{etyl|ang|en}} {{term
 #*: They were also accompanied by Luis Villar Bordo, whom García Márquez had met during his student years at the Universidad Nacional de Bogotá. In a Renault 14, they drove from one '''Germany''' to the other, {{...}}
 
 ====Usage note====
-In its present use, "Germany" almost always refers to the [[Federal Republic of Germany]].<ref name=oed/> In its historic and historical use, the extent of "Germany" was a fraught issue, known in the 19th century as "[[w:The German Question|The German Question]]". The political area considered "Germany" might include or exclude areas such as [[Austria]] or (less often) [[Switzerland]] depending on the speaker and context. The area more often described an ethnic region than a polity into the 16th century. In Old English, it was even occasionally used to refer to areas of [[England]] held by the [[Saxons]], [[Angles]], &c.<ref name=oed/> The medieval "Kingdom of Germany" is an English anachronism translating the {{etyl|la}} {{term|rex|lang=la}} {{term|Teutonicorum|lang=la}} ("king of the [[Teutons]]"), which was initially used as a derogatory exonym before being adopted as a formal title of the Holy Roman Emperors in the early Modern period. The title adopted by the medieval Central European rulers themselves was {{term|rex|lang=la}} {{term|Romanorum|lang=la}} ("king of the [[Romans]]").
+In its present use, "Germany" almost always refers to the [[Federal Republic of Germany]].<ref name=oed/> In its historic and historical use, the extent of "Germany" was a fraught issue, known in the 19th century as "[[w:The German Question|The German Question]]". The political area considered "Germany" might include or exclude areas such as [[Austria]] or (less often) [[Switzerland]] depending on the speaker and context. The area more often described an ethnic region than a polity into the 16th century. In Old English, it was even occasionally used to refer to areas of [[England]] held by the [[Saxons]], [[Angles]], &c.<ref name=oed/> The medieval "Kingdom of Germany" is an English anachronism translating the {{etyl|la|-}} {{term|rex|lang=la}} {{term|Teutonicorum|lang=la}} ("king of the [[Teutons]]"), which was initially used as a derogatory exonym before being adopted as a formal title of the Holy Roman Emperors in the early Modern period. The title adopted by the medieval Central European rulers themselves was {{term|rex|lang=la}} {{term|Romanorum|lang=la}} ("king of the [[Romans]]").
 
 ====Synonyms====
 * {{sense|present state}} [[Federal Republic of Germany]] ([[FRG]], [[BRD]]), [[German]] [[republic|Republic]]
