--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -11,7 +11,7 @@ From {{etyl|enm|en}} {{term|Germanie|lang=enm}} &c., from {{etyl|ang|en}} {{term
 * {{audio|en-us-Germany.ogg|Audio (US)|lang=en}}
 
 ===Proper noun===
-{{en-proper noun|~|s|Germanies}}
+{{en-proper noun|~|Germanies|Germanys}}
 
 # {{context|geography|lang=en}} The [[Central Europe]]an [[state]] [[form]]ed by [[West Germany]]'s 1990 [[absorption]] of [[East Germany]], with its [[capital]] in [[Berlin]].
 #* '''1996''', Paul Bookbinder, ''Weimar '''Germany''': the republic of the reasonable'' (ISBN 0719042879), page 90
