--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -14,18 +14,21 @@ From {{etyl|enm|en}} {{term|Germanie|lang=enm}} &c., from {{etyl|ang|en}} {{term
 {{en-proper noun|~|Germanies|Germanys}}
 
 # {{context|geography|lang=en}} The [[Central Europe]]an [[state]] [[form]]ed by [[West Germany]]'s 1990 [[absorption]] of [[East Germany]], with its [[capital]] in [[Berlin]].
+#* '''2014 Sept. 25''', Michael Heise, "[http://online.wsj.com/articles/the-myth-of-the-stupid-german-investor-1411668084 The Myth of the Stupid German Investor" in the ''Wall Street Journal''.
+#*: Germans save a lot, produce plenty and spend little. The result is a massive external surplus. Last year, '''Germany'''&rsquo;s current account surplus stood at almost [[€]]200 billion ([[USD|$]]260 billion), the world's largest.
 # {{context|geography|historical|lang=en}} The [[Central Europe]]an [[state]] [[form]]ed by [[Prussia]] in 1871 or its [[successor]] [[state]]s, with their [[capital]]s in [[Berlin]].
 #* '''1996''', Paul Bookbinder, ''Weimar '''Germany''': the republic of the reasonable'' (ISBN 0719042879), page 90
 #*: Severing's belief that trade union workers were the most progressive and democratic element in '''Germany''' holds up well under investigation.
 # {{context|geography|historical|lang=en}} A [[nominal]] [[medieval]] [[kingdom]] [[form]]ing a [[region]] of the [[Carolingian]] and [[Holy Roman Empire|Holy Roman]] [[empire]]s, with [[various]] [[capital]]s.
 # {{context|geography|chiefly|_|historical|lang=en}} The [[nation]] of the [[German]] [[people]], [[regardless]] of their [[political]] [[unification]] (''see usage note'').
 # {{context|countable|geography|historical|lang=en}} [[West Germany|West]] or [[East Germany]] or [[any]] [[other]] [[German]] [[state]] (''see usage note''); {{context|in the plural|lang=en}} [[both]], [[several]], or [[all]] of [[these]] [[state]]s, [[take]]n [[together]].
-#*'''1872''', ''History of English Literature'', an abridgment by John Fiske of H. van Laun's translation of Hippolyte Taine's '''1864''' ''Histoire de la littérature anglaise''; page 26:
+#*'''1872''', ''History of English Literature'', John Fiske's abridgment of H. van Laun's translation of Hippolyte Taine's ''Histoire de la littérature anglaise'' (1864), page 26:
 #*: While the Germans of Gaul, Italy, and Spain became Romans, the Saxons retained their language, their genius, and manners, and created in Britain a '''Germany''' outside of '''Germany'''.
-#* '''1987''', Henry Ashby Turner, ''The Two '''Germanies''' Since 1945'' (ISBN 0300038658)
-#* '''2007''', William Clark, ''Academic Charisma and the Origins of the Research University'' (ISBN 0226109224), page 84:
+#* '''2007''', William Clark, ''Academic Charisma and the Origins of the Research University'', ISBN 0226109224, page 84:
 #*: The differences between England and the '''Germanies''' sprang from the absence or presence of ministerial interventions.
-#* '''2010''', Ilan Stavans, ''Gabriel García Márquez: The Early Years'' (ISBN 0312240333):
+#*'''2010''', Klaus Wiegrefe, "[ Germany's Unlikely Diplomatic Triumph]" in ''Spiegel Online'':
+#*: It is the fall of 1989, and two time zones farther to the west, thousands of people march through downtown Leipzig every Monday, while more than 6,000 East German citizens are camped out in the embassies of West Germany in Prague and Warsaw, hoping to be allowed to emigrate. The images have circled the globe, and it is clear to leaders Thatcher and Gorbachev that the two '''Germanys''' are on the verge of radical change. 
+#* '''2010''', Ilan Stavans, ''Gabriel García Márquez: The Early Years'', ISBN 0312240333:
 #*: They were also accompanied by Luis Villar Bordo, whom García Márquez had met during his student years at the Universidad Nacional de Bogotá. In a Renault 14, they drove from one '''Germany''' to the other, {{...}}
 
 ====Usage note====
