--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -19,8 +19,14 @@ From {{etyl|enm|en}} {{term|Germanie|lang=enm}} &c., from {{etyl|ang|en}} {{term
 # {{context|geography|historical|lang=en}} The [[Central Europe]]an [[state]] [[form]]ed by [[Prussia]] in 1871 or its [[successor]] [[state]]s, with their [[capital]]s in [[Berlin]].
 #* '''1996''', Paul Bookbinder, ''Weimar '''Germany''': the republic of the reasonable'' (ISBN 0719042879), page 90
 #*: Severing's belief that trade union workers were the most progressive and democratic element in '''Germany''' holds up well under investigation.
-# {{context|geography|historical|lang=en}} A [[nominal]] [[medieval]] [[kingdom]] [[form]]ing a [[region]] of the [[Carolingian]] and [[Holy Roman Empire|Holy Roman]] [[empire]]s, with [[various]] [[capital]]s.
+# {{context|geography|historical|lang=en}} A [[nominal]] [[medieval]] [[kingdom]] [[form]]ing a [[region]] of the [[Carolingian]] and [[Holy Roman Empire|Holy Roman]] [[empire]]s, with [[various]] [[capital]]s; by [[extension]], the [[Holy Roman Empire]] [[itself]].
+#* '''17th c.''', ''A Military History of Germany; and of England. From the Year 1631 to the Year 1648. Being the Memoirs of an English Gentleman, who served in the army of Gustavus Adolphus; and afterwards in the Royal Army of King Charles I'' (1759), [http://books.google.com/books?id=1JlBAAAAcAAJ&pg=PA33 page 33]: 
+#*:There had been a long bloody war in the empire of '''Germany''' for twelve years, between the Emperor, the Duke of [[Bavaria]], the King of [[Spain]], and the [[popish|Popiſh]] Princes and Electors, on the one side; and the [[Protestant|Proteſtant]] Princes on the other; and both [[side|ſides]] having been [[exhausted|exhauſted]] by the war, and even the [[Catholics|Catholicks]] [[themselves|themſelves]] beginning to [[dislike|diſlike]] the growing power of the [[house|houſe]] of [[Austria|Auſtria]], it was thought that all parties were willing to make peace.
+#* '''1790''', Thomas B. Clarke, ''A Statistical View of Germany, in respect to the Imperial and Territorial Constitutions, Forms of Government, Legislation, Administration of Justice, and Ecclesiastical State'', [http://books.google.com/books?id=SY1LAAAAcAAJ&pg=PA13 page 13]: 
+#*: When the race of Charlemagne [[cease|ceaſed]] to govern in '''Germany''', the princes and [[state|ſtate]]s [[associate|aſſociated]] to continue the empire; and that its [[majesty|majeſty]] might be [[visible|viſible]], and its laws enforced, they agreed to [[choose|chooſe]] an emperor. From this emperor, all electors and princes, except [[those|thoſe]] before 1582, receive [[investiture|inveſtiture]] of their dominions; counts and free cities from the [[w:Aulic Council|Aulic council]]. But this [[investiture|inveſtiture]] is no more than a [[sign|ſign]] of [[submission|ſubmiſſion]] to the [[majesty|majeſty]] of the empire, which is [[deposit|depoſited]] in the emperor. For as the [[constitute|conſtituted]] members of the empire are dependent on that collective union from which they derive protection, they therefore [[shew|ſhew]] this dependence on the emperor, [[because|becauſe]] he [[represent|repreſents]] the [[majesty|majeſty]] of that union, or of the empire; but in all other [[respect|reſpects]] they are independent and free.
 # {{context|geography|chiefly|_|historical|lang=en}} The [[nation]] of the [[German]] [[people]], [[regardless]] of their [[political]] [[unification]] (''see usage note'').
+#* '''1775''', Charles Burney, ''The Present State of Music in Germany, the Netherlands, and United Provinces'', [http://books.google.com/books?id=O1EUAAAAQAAJ&pg=PA3 Vol. II, page 3]:
+#*: I had frequently been told, that the [[Bohemia]]ns were the [[most|moſt]] [[musical|muſical]] people of '''Germany''', or, perhaps, of all Europe...
 #* '''1776''', Edward Gibbon, ''The History of the Decline and Fall of the Roman Empire'', [http://books.google.com/books?id=aLcWAAAAQAAJ&pg=PA218 Vol. I, page 218]: 
 #*: Ancient '''Germany''', excluding from its independent limits the province [[westward|weſtward]] of the Rhine, which had [[submit|ſubmitted]] to the Roman yoke, extended [[itself|itſelf]] over a third part of Europe. [[almost|Almoſt]] the whole of modern '''Germany''', Denmark, Norway, Sweden, Finland, [[Livonia]], [[Prussia|Pruſſia]], and the greater part of Poland, were peopled by the various tribes of one great nation, [[whose|whoſe]] complexion, manners, and language, denoted a common origin and [[preserve|preſerved]] a [[striking|ſtriking]] [[resemblance|reſemblance]].
 # {{context|countable|geography|historical|lang=en}} [[West Germany|West]] or [[East Germany]] or [[any]] [[other]] [[German]] [[state]] (''see usage note''); {{context|in the plural|lang=en}} [[both]], [[several]], or [[all]] of [[these]] [[state]]s, [[take]]n [[together]].
@@ -34,7 +40,7 @@ From {{etyl|enm|en}} {{term|Germanie|lang=enm}} &c., from {{etyl|ang|en}} {{term
 #*: It is the fall of 1989, and two time zones farther to the west, thousands of people march through downtown Leipzig every Monday, while more than 6,000 East German citizens are camped out in the embassies of West Germany in Prague and Warsaw, hoping to be allowed to emigrate. The images have circled the globe, and it is clear to leaders Thatcher and Gorbachev that the two '''Germanys''' are on the verge of radical change. 
 
 ====Usage note====
-In its present use, "Germany" almost always refers to the [[Federal Republic of Germany]].<ref name=oed/> In its historic and historical use, the extent of "Germany" was a fraught issue, known in the 19th century as "[[w:The German Question|The German Question]]". The political area considered "Germany" might include or exclude areas such as [[Prussia]], [[Austria]], or [[Switzerland]] depending on the speaker and context. The area more often described an ethnic region than a polity into the 16th century. In Old English, it was even occasionally used to refer to areas of [[England]] held by the [[Saxons]], [[Angles]], &c.<ref name=oed/> The medieval "Kingdom of Germany" is an English anachronism translating the {{etyl|la|-}} {{term|rex|lang=la}} {{term|Teutonicorum|lang=la}} ("king of the [[Teutons]]"), which was initially used as a derogatory exonym before being adopted as a formal title of the Holy Roman Emperors in the early Modern period. The title adopted by the medieval Central European rulers themselves was {{term|rex|lang=la}} {{term|Romanorum|lang=la}} ("king of the [[Romans]]").
+In its present use, "Germany" almost always refers to the [[Federal Republic of Germany]].<ref name=oed/> In its historic and historical use, the extent of "Germany" was a fraught issue, known in the 19th century as "[[w:The German Question|The German Question]]". The political area considered "Germany" might include or exclude areas such as [[Prussia]], [[Austria]], [[Bohemia]], or [[Switzerland]] depending on the speaker and context. The area more often described an ethnic region than a polity into the 16th century. In Old English, it was even occasionally used to refer to areas of [[England]] held by the [[Saxons]], [[Angles]], &c.<ref name=oed/> The medieval "Kingdom of Germany" is an English anachronism translating the {{etyl|la|-}} {{term|rex|lang=la}} {{term|Teutonicorum|lang=la}} ("king of the [[Teutons]]"), which was initially used as a derogatory exonym before being adopted as a formal title of the Holy Roman Emperors in the early Modern period. The title adopted by the medieval Central European rulers themselves was {{term|rex|lang=la}} {{term|Romanorum|lang=la}} ("king of the [[Romans]]").
 
 ====Synonyms====
 * {{sense|present state}} [[Federal Republic of Germany]] ([[FRG]], [[BRD]]), [[German]] [[republic|Republic]]
