--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -266,7 +266,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 
 ===Etymology 2===
 {{wikipedia}}
-From {{etyl|fro|en}} {{term|comte|lang=fro}}, {{term|conte|lang=fro}}, from {{etyl|la|en}} {{term|comes|lang=la}}, ''comitem''.
+From {{etyl|fro|en}} {{term|comte|lang=fro}} and {{term|conte|lang=fro}} ("count"), from {{etyl|la|en}} {{term|comes|lang=la}} ("[[companion]]") in the sense of nobles fighting alongside the king.
 
 ====Noun====
 {{en-noun}}
