--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -33,7 +33,7 @@
 {{ja-kanji|grade=5|rs=日04}}
 
 ====Readings====
-* {{ja-readings|goon=[[い]] (i)|kanon=[[い]] (i), [[えき]] (eki)|kun=[[やさしい]] (yasashii), [[かえる]] (kaeru), [[おさめる]] (osameru)}}
+* {{ja-readings|goon=[[い]] (i), [[やく]] (yaku)|kanon=[[い]] (i), [[えき]] (eki)|kun=[[やさしい]] (yasashii), [[かえる]] (kaeru), [[おさめる]] (osameru)}}
 
 ===Noun===
 {{ja-noun|えき}}
