--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -7,7 +7,7 @@
 * {{audio|en-us-Czech Republic.ogg|Audio (US)|lang=en}}
 
 ===Proper noun===
-{{en-proper noun}}
+{{en-proper noun|head=the [[Czech]] [[republic|Republic]]}}
 
 # A [[country]] in [[Central Europe]]. Official short-form name: [[Czechia]].
 
