--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -17,29 +17,30 @@
 
 ====Translations====
 {{trans-top|country in Central Europe}}
-* Afrikaans: {{t|af|Tsjeggiese Republiek}}
-* Arabic: {{t|ar|جمهورية التشيك|f|tr=jumhuuriyyat al-tshik|sc=Arab}}
-* Armenian: {{t|hy|Չեխիայի Հանրապետություն|tr=Čexiayi Hanrapetut'yun|sc=Armn}}
-* Azeri: {{t|az|Çex Respublikası}}
-* Belarusian: {{t|be|Чэшская рэспубліка|f|tr=Čéšskaja Respúblika|sc=Cyrl}}
+* Afrikaans: {{t|af|Tsjeggiese Republiek}}, {{t|af|Tsjeggië}}
+* Arabic: {{t|ar|جمهورية التشيك|f|tr=jumhūriyyat al-tšik|sc=Arab}}, {{t|ar|التشيك|m|tr=al-tšīk, al-tšek|sc=Arab}}
+* Armenian: {{t|hy|Չեխիայի Հանրապետություն|sc=Armn}}, {{t|hy|Չեխիա|sc=Armn}}
+* Azeri: {{t|az|Çex Respublikası}}, {{t+|az|Çexiya}}
+* Belarusian: {{t|be|Чэ́шская рэспу́бліка|f|sc=Cyrl}}, {{t|be|Чэ́хія|f|sc=Cyrl}}
 * Bengali: {{t|bn|চেক প্রজাতন্ত্র|sc=Beng}}
 * Breton: {{t|br|Republik Tchek}}
-* Bulgarian: {{t|bg|Чешка република|f|tr=Čéška repúblika|sc=Cyrl}}
+* Bulgarian: {{t|bg|Че́шка репу́блика|f|sc=Cyrl}}, {{t+|bg|Че́хия|f|sc=Cyrl}}
+* Burmese: {{t|my|ချက်သမ္မတနိုင်ငံ|sc=Mymr}}, {{t|my|ခ္ယက္|sc=Mymr}}
 * Catalan: {{t|ca|República Txeca|f}}
 * Chinese:
-*: Mandarin: {{t+|cmn|捷克共和國|sc=Hani}}, {{t|cmn|捷克共和国|tr=Jiékè Gònghéguó|sc=Hani}}
-* Chuvash: {{t|cv|Чех Республики|tr=Čeh Respubliki|sc=Cyrl}}
+*: Mandarin: {{t+|cmn|捷克共和國|sc=Hani}}, {{t|cmn|捷克共和国|tr=Jiékè gònghéguó|sc=Hani}}, {{t+|cmn|捷克|tr=Jiékè|sc=Hani}}
+* Chuvash: {{t|cv|Чех Республики|sc=Cyrl}}
 * Crimean Tatar: {{t|crh|Çeh Cumhuriyeti}}
-* Czech: {{t+|cs|Česká republika|f}}
-* Danish: {{t+|da|Den Tjekkiske Republik}}
-* Dutch: {{t+|nl|Tsjechische Republiek}}
+* Czech: {{t+|cs|Česká republika|f}}, {{t+|cs|Česko|n}}
+* Danish: {{t+|da|Den Tjekkiske Republik}}, {{t+|da|Tjekkiet}}
+* Dutch: {{t+|nl|Tsjechische Republiek}}, {{t+|nl|Tsjechië|n}}
 * Esperanto: {{t|eo|Ĉeĥa Respubliko}}
-* Estonian: {{t|et|Tšehhi Vabariik}}
+* Estonian: {{t|et|Tšehhi Vabariik}}, {{t+|et|Tšehhi}}, rarely {{t|et|Tšehhimaa}}
 * Faroese: {{t|fo|Kekska lýðveldið|n}}
 * Finnish: {{t+|fi|Tšekin tasavalta}}
-* French: {{t+|fr|République tchèque|f}}
-* German: {{t+|de|Tschechische Republik}}
-* Greek: {{t|el|Δημοκρατία της Τσεχίας|f|tr=Dimokratía tis Tsechías|sc=Grek}}
+* French: {{t+|fr|République tchèque|f}}, {{t+|fr|Tchéquie|f}}
+* German: {{t+|de|Tschechische Republik|f}}, {{t+|de|Tschechien|n}}, rarely {{t+|de|Tschechei|f}}
+* Greek: {{t|el|Δημοκρατία της Τσεχίας|f|sc=Grek}}, {{t+|el|Τσεχία|f|sc=Grek}}
 * Haitian Creole: {{t|ht|Repiblik Tcheki}}
 * Hebrew: {{t|he|הרפובליקה הצ׳כית|f|tr=ha'republiqa ha'chekhit|sc=Hebr}}
 * Hindi: {{t|hi|चेक रिपब्लिक|tr=cek ripablik|sc=Deva}}
@@ -48,52 +49,52 @@
 * Interlingua: {{t|ia|Republica Chec}}
 * Irish: {{t|ga|Poblacht na Seice|f}}
 * Italian: {{t+|it|Repubblica Ceca|f}}
-* Japanese: {{t|ja|チェコ共和国|tr=ちぇこきょうわこく, Cheko-kyōwakoku}}
+* Japanese: {{t|ja|チェコ共和国|tr=ちぇこきょうわこく, Cheko kyōwakoku}}, {{t+|ja|チェコ|tr=Cheko}}
 * Jèrriais: {{t|roa-jer|Républyique Tchèque|f}}
-* Kazakh: {{t|kk|Чех Республикасы|tr=Čex Respublikası|sc=Cyrl}}
+* Kazakh: {{t|kk|Чех Республикасы|sc=Cyrl}}, {{t|kk|Чехия|sc=Cyrl}}
 * Khmer: {{t|km|សាធារណរដ្ឋឆែក|tr=sar thea rak nak roath chaek|sc=Khmr}}
-* Korean: {{t|ko|체코 공화국|tr=Cheko gong-hwaguk|sc=Hang}}
+* Korean: {{t|ko|^체코 공화국|sc=Hang}}, {{t+|ko|^체코|sc=Hang}}
 * Kurdish: {{t|ku|Komara Çêkiyayê}}
 {{trans-mid}}
 * Latin: {{t|la|Respublica Cecha|f}}
-* Latvian: {{t|lv|Čehijas Republika|f}}
+* Latvian: {{t|lv|Čehijas Republika|f}}, {{t+|lv|Čehija|f}}
 * Luxembourgish: {{t+|lb|Tschechesch Republik}}
-* Macedonian: {{t|mk|Чешка Република|f|tr=Čéška Repúblika|sc=Cyrl}}
+* Macedonian: {{t|mk|Че́шка Репу́блика|f|sc=Cyrl}}, {{t+|mk|Че́шка|f|sc=Cyrl}}, rarely {{t|mk|Че́хија|f|sc=Cyrl}}
 * Malay: {{t|ms|Republik Czech}}
 * Maltese: {{t|mt|Repubblika Ċeka|alt=ir-Repubblika Ċeka}}
 * Navajo: {{t|nv|Chek bikéyah}}
-* Norwegian: {{t|no|Den tsjekkiske republikk}}
+* Norwegian: {{t|no|Den tsjekkiske republikk}}, {{t+|no|Tsjekkia}}
 * Occitan: {{t+|oc|Republica Chèca|f}}
-* Persian: {{t+|fa|جمهوری چک|tr=Jomhuri-ye Chek|sc=fa-Arab}}
+* Persian: {{t+|fa|جمهوری چک|tr=jomhuri-ye ček|sc=fa-Arab}}, {{t+|fa|چک|tr=ček|sc=fa-Arab}}
 * Polish: {{t+|pl|Republika Czeska|f}}
 * Pontic Greek: {{t|pnt|Δημοκρατίαν τη Τσεχίας}}
-* Portuguese: {{t+|pt|República Tcheca}}
+* Portuguese: {{t+|pt|República Tcheca}}, {{t+|pt|Chéquia|f}}, {{t+|pt|Tchéquia|f}}
 * Quechua: {{t|qu|Chiksuyu}}
 * Romanian: {{t+|ro|Republica Cehă|f}}
 * Romansch: {{t|rm|Republica Tscheca|f}} 
-* Russian: {{t|ru|Чешская Республика|f|tr=Čéšskaja Respúblika|sc=Cyrl}}
+* Russian: {{t|ru|Че́шская Респу́блика|f|sc=Cyrl}}, {{t+|ru|Че́хия|f|sc=Cyrl}}
 * Scottish Gaelic: an t-{{t|gd|Seic|f}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|Чешка Република|f|sc=Cyrl}}
-*: Roman: {{t|sh|Češka Republika|f}}
+*: Cyrillic: {{t|sh|Чешка Република|f|sc=Cyrl}}, {{t|sh|Чешка|f|sc=Cyrl}}
+*: Roman: {{t|sh|Češka Republika|f}}, {{t+|sh|Češka|f}}
 * Sicilian: {{t|scn|Ripùbblica Ceca|f}}
 * Silesian: {{t|szl|Czesko Republika|f}}, (''colloquial'') 
-* Slovak: {{t|sk|Česká republika|f}}
-* Slovene: {{t|sl|Čéška Repúblika|f}}
+* Slovak: {{t|sk|Česká republika|f}}, {{t|sk|Česko|n}}
+* Slovene: {{t|sl|Čéška Repúblika|f}}, {{t|sl|Čéška|f}}
 * Spanish: {{t+|es|República Checa|f}}
 * Swahili: {{t|sw|Jamhuri ya Ucheki}}
-* Swedish: {{t|sv|Tjeckiska republiken}}
+* Swedish: {{t|sv|Tjeckiska republiken}}, {{t+|sv|Tjeckien}}
 * Thai: {{t+|th|สาธารณรัฐเช็ก|tr=săa-taa-rá-ná-rát chék|sc=Thai}}
-* Turkish: {{t+|tr|Çek Cumhuriyeti}}
-* Turkmen: {{t|tk|Çeh Republikasy}}
-* Ukrainian: {{t|uk|Чеська Республіка|f|tr=Čés'ka Respúblika|sc=Cyrl}}
+* Turkish: {{t+|tr|Çek Cumhuriyeti}}, {{t|tr|Çekya}}
+* Turkmen: {{t|tk|Çeh Republikasy}}, {{t|tk|Çehiýa}}
+* Ukrainian: {{t|uk|Че́ська Респу́бліка|f|sc=Cyrl}}, {{t+|uk|Че́хія|f|sc=Cyrl}}
 * Uyghur: {{t|ug|چېخ جۇمھۇرىيەتى|sc=ug-Arab}}
-* Uzbek: {{t|uz|Chex Respublikasi}}
+* Uzbek: {{t|uz|Chex Respublikasi}}, {{t+|uz|Chexiya}}
 * Vietnamese: {{t|vi|Cộng hòa Séc}}
 * Võro: {{t|vro|Tsehhi Vabariik'}}
 * Welsh: {{t|cy|Y Weriniaeth Tsiec}}
-* Yakut: {{t|sah|Чех Республиката|tr=Čex Respublikata|sc=Cyrl}}
-* Yiddish: {{t|yi|טשעכישע רעפּובליק|tr=tshekhishe republik}}
+* Yakut: {{t|sah|Чех Республиката|sc=Cyrl}}
+* Yiddish: {{t|yi|טשעכישע רעפּובליק|f}}, {{t|yi|טשעכײַ|f|sc=Hebr}}
 {{trans-bottom}}
 
 ====See also====
